2003-02-01  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* src/SDCCmain.c: Fixed bug 678574: "ds390: ASlink-Error-Stack overlaps
	area 'DATA'"

2003-02-01    <johan@balder>

	* src/SDCCval.c (valBitwise): fixed Karl's "2 | (1<<8)"

2003-01-31    <johan@CP255758-A>

	* src/ds390/main.c (_ds390_genAssemblerPreamble): applied Jan Rejlek's >64K startup patch

2003-01-30    <johan@balder>

	* src/SDCCBBlock.c: automatic bug detection
	* src/SDCCicode.c: automatic bug detection

2003-01-29  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* src/SDCCglobl.h:   now --xram-size 0 works
	* src/SDCCmain.c:    now --xram-size 0 works

2003-01-29    <johan@balder>

	* src/almosteverything: changed OP_DEFS and OP_USES from macros to functions to catch symbol abuse (a hot topic in the bug list :)

2003-01-29  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* as/mcs51/aslink.h: Added options --xram-size and --code-size 
	* as/mcs51/lkdata.c: Added options --xram-size and --code-size 
	* as/mcs51/lkmain.c: Added options --xram-size and --code-size 
	* as/mcs51/lkmem.c:  Added options --xram-size and --code-size 
	* src/SDCCglobl.h:   Added options --xram-size and --code-size 
	* src/SDCCmain.c:    Added options --xram-size and --code-size 

2003-01-28  Bernhard Held <bernhard@bernhardheld.de>

	* src/ds390/gen.c: fix deps by replacing <common.h> with "common.h"
	* src/SDCC.lex: rename P_OVERLAY to P_OVERLAY_ for cross-gcc 3.2 MINGW32 

2003-01-27    <johan@balder>

	* src/SDCC.y: fixed bug #613764

2003-01-26    <johan@balder>

	* src/SDCClrange.c:  fixed Bernhard's "char * code ptr = &c"
	* src/SDCCsymt.h: fixed bug #673374
	* src/SDCCglue.c: fixed bug #661910
	* src/SDCCast.c: fixed bug #458099 and 673374

2003-01-26  Bernhard Held <bernhard@bernhardheld.de>

	* as/mcs51/strcmpi.c: added, provides Aurelien Jarno's as_strcmpi(); strcmpi() is not ANSI
	* as/mcs51/strcmpi.h: added
	* as/mcs51/asm.h: remove ugly "#define strcmpi strcmp"
	* as/mcs51/aslink.h: remove ugly "#define strcmpi strcmp"